gccida/g1/output_constant_def_contents
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constant_def_contents/src/varasm.c:3894:31: error: use of undeclared identifier 'machine_mode'
mergeable_constant_section( ( machine_mode)LOBYTE( v3->block.supercontext), v5, 0); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constant_def_contents/src/varasm.c:3943:52: error: use of undeclared identifier 'a'
fprintf( asm_out_file, ".%s%u:\n", ( const char *)&a.dw_attr_val, ( unsigned int)labelno); 
                                                   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constant_def_contents/src/obj/varasm.o] Error 1
